--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mission 2022</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Work+Sans&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <div class="flexible-containner">
+        <div class="half-width">
+            <div id="headline-left-line" class="line-spacing">
+                <h1 class="top-headline">Stay Focused on</h1>
+                <h1 class="top-headline purple-font-color">Mission 2022</h1>
+            </div>
+            <p class="line-spacing-bottom">I will become a job ready participent in through Programming Hero course. I
+                will learn all I can about
+                web development and technologies within 2022.</p>
+            <a href="explore.html" target="_blank" class="button">Explore Now</a>
+            <p class="line-spacing-top">Scroll down to know more about me.</p>
+        </div>
+        <div class="half-width">
+            <img src="/images/person/person-5.png" alt="person-5">
+        </div>
+    </div>
 </body>
+
 </html>
