--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="line-spacing-top">Scroll down to know more about me.</p>
         </div>
         <div class="half-width">
-            <img src="/images/person/person-5.png" alt="person-5">
+            <img src="images/person/person-5.png" alt="person-5">
         </div>
     </div>
 </body>
