--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 class="top-headline">Stay Focused on</h1>
                 <h1 class="top-headline purple-font-color">Mission 2022</h1>
             </div>
-            <p class="line-spacing-bottom">I will become a job ready participent in through Programming Hero course. I
+            <p class="line-spacing-bottom">I will become a job ready participent through Programming Hero course. I
                 will learn all I can about
                 web development and technologies within 2022.</p>
             <a href="explore.html" target="_blank" class="button">Explore Now</a>
