added mission vission goal

--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Work+Sans:wght@400;600;800&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div class="flexible-containner">
+    <!--Top Side-->
+    <section class="flexible-containner">
         <div class="half-width">
-            <div id="headline-left-line" class="line-spacing">
+            <div id="headline-left-line">
                 <h1 class="top-headline">Stay Focused on</h1>
                 <h1 class="top-headline purple-font-color">Mission 2022</h1>
             </div>
-            <p class="line-spacing-bottom">I will become a job ready participent through Programming Hero course. I
+            <p class="line-spacing-bottom">I will become a job ready participent through Programming Hero Complete Web
+                Development course. I
                 will learn all I can about
                 web development and technologies within 2022.</p>
             <a href="explore.html" target="_blank" class="button">Explore Now</a>
@@ -28,7 +31,32 @@
         <div class="half-width">
             <img src="images/person/person-5.png" alt="person-5">
         </div>
-    </div>
+    </section>
+
+    <!--Mission Vission Goal section-->
+    <h1 id="mission-div-h1">My Mission in<span class="purple-font-color">2022</span></h1>
+
+    <section class="mission-vission flexible-containner">
+        <div id="mission" class="tro-width">
+            <img src="images/illustrators/illustrator-1.png" alt="illustrator-1">
+            <h3>Mission</h3>
+            <p>I am on a mission to learn HTML, HTML5, CSS, CSS3, Javascript, ES6, MongoDB, React, NodeJS, git,
+                GitHub within 2022. So that I can make responsive and scalable websites with little effort.</p>
+        </div>
+        <div id="vission" class="tro-width">
+            <img src="images/illustrators/illustrator-2.png" alt="illustrator-2">
+            <h3>Vission</h3>
+            <p>I vission myself as a job ready candidate, making effective communication with my potential
+                employeers during interview. I vission myself working hard and strong on the tasks provided to me by
+                my employeers easily and comfortably.</p>
+        </div>
+        <div id="goals" class="tro-width">
+            <img src="/images/illustrators/illustrator-3.png" alt="illustrator-3">
+            <h3>Goals</h3>
+            <p>I am on a mission to learn HTML, HTML5, CSS, CSS3, Javascript, ES6, MongoDB, React, NodeJS, git,
+                GitHub within 2022. So that I can make responsive and scalable websites with little effort.</p>
+        </div>
+    </section>
 </body>
 
 </html>
