added mid sections

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <!--Top Side-->
-    <section class="flexible-containner">
+    <!--Top Section-->
+    <section class="top-section flexible-containner">
         <div class="half-width">
             <div id="headline-left-line">
                 <h1 class="top-headline">Stay Focused on</h1>
@@ -33,9 +33,8 @@
         </div>
     </section>
 
-    <!--Mission Vission Goal section-->
-    <h1 id="mission-div-h1">My Mission in<span class="purple-font-color">2022</span></h1>
-
+    <!--Mission Vission Goal Section-->
+    <h1 id="mission-div-h1">My Mission in <span class="purple-font-color">2022</span></h1>
     <section class="mission-vission flexible-containner">
         <div id="mission" class="tro-width">
             <img src="images/illustrators/illustrator-1.png" alt="illustrator-1">
@@ -47,8 +46,7 @@
             <img src="images/illustrators/illustrator-2.png" alt="illustrator-2">
             <h3>Vission</h3>
             <p>I vission myself as a job ready candidate, making effective communication with my potential
-                employeers during interview. I vission myself working hard and strong on the tasks provided to me by
-                my employeers easily and comfortably.</p>
+                employeers during interview.</p>
         </div>
         <div id="goals" class="tro-width">
             <img src="/images/illustrators/illustrator-3.png" alt="illustrator-3">
@@ -57,6 +55,36 @@
                 GitHub within 2022. So that I can make responsive and scalable websites with little effort.</p>
         </div>
     </section>
+
+    <!--Only sky is the limit Section-->
+    <section class="limitless-sky flexible-containner">
+        <div id="shape" class="half-width">
+            <img src="images/shapes/shape-1.png" alt="shape-1">
+        </div>
+        <div id="coding" class="half-width">
+            <img src="images/pictures/coding.png" alt="coding">
+        </div>
+        <div id="right-padding">
+            <h1 class="line-spacing-bottom">Only Sky is the Limit</h1>
+            <p class="line-spacing-bottom">If you say the sky is the limit, you mean that there is nothing to prevent someone or something from being very successful.
+                They have found that, in terms of both salary and career success, the sky is the limit.</p>
+            <a href="https://www.nasa.gov/audience/foreducators/5-8/features/F_How_Big_is_Our_Universe.html" target="_blank" class="button">Know the limit</a>
+        </div>
+    </section>
+
+    <!--Time to Fly Section-->
+    <section class="limitless-sky flexible-containner">
+        <div id="right-padding">
+            <h1 class="line-spacing-bottom">Time to fly!</h1>
+            <p class="line-spacing-bottom">After achieving my goals, the final part of the mission will start.  The doors of learning new skills and experiences will be open to me. I shall strive to make myself successful. Because becomming a fullstack developer will be my next target.</p>
+            <a href="https://www.nasa.gov/image-feature/demo-2-launch-setting-forth-on-a-historic-journey" target="_blank" class="button">Let's Fly</a>
+        </div>
+        <div id="coding" class="half-width">
+            <img src="images/pictures/project.png" alt="coding">
+        <div id="shape2" class="half-width">
+            <img src="images/shapes/shape-1.png" alt="shape-1">
+    </section>
+    
 </body>
 
 </html>
