--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Work+Sans:wght@400;600;800&display=swap"
         rel="stylesheet">
+    
 </head>
 
 <body>
@@ -25,7 +26,7 @@
                 Development course. I
                 will learn all I can about
                 web development and technologies within 2022.</p>
-            <a href="explore.html" target="_blank" class="button">Explore Now</a>
+            <a href="https://earth.google.com/" target="_blank" class="button">Explore Now</a>
             <p class="line-spacing-top">Scroll down to know more about me.</p>
         </div>
         <div class="half-width">
@@ -51,7 +52,7 @@
         <div id="goals" class="tro-width">
             <img src="/images/illustrators/illustrator-3.png" alt="illustrator-3">
             <h3>Goals</h3>
-            <p>I am on a mission to learn HTML, HTML5, CSS, CSS3, Javascript, ES6, MongoDB, React, NodeJS, git,
+            <p>My goal is to learn HTML, HTML5, CSS, CSS3, Javascript, ES6, MongoDB, React, NodeJS, git,
                 GitHub within 2022. So that I can make responsive and scalable websites with little effort.</p>
         </div>
     </section>
@@ -77,14 +78,28 @@
         <div id="right-padding">
             <h1 class="line-spacing-bottom">Time to fly!</h1>
             <p class="line-spacing-bottom">After achieving my goals, the final part of the mission will start.  The doors of learning new skills and experiences will be open to me. I shall strive to make myself successful. Because becomming a fullstack developer will be my next target.</p>
-            <a href="https://www.nasa.gov/image-feature/demo-2-launch-setting-forth-on-a-historic-journey" target="_blank" class="button">Let's Fly</a>
+            <a href="images/404 Illustrations.html" target="_blank" class="button">Let's Fly</a>
         </div>
         <div id="coding" class="half-width">
             <img src="images/pictures/project.png" alt="coding">
         <div id="shape2" class="half-width">
             <img src="images/shapes/shape-1.png" alt="shape-1">
     </section>
-    
+
+    <!--Invite to Github Section-->
+    <section class="welcome">
+        <div class="half-width">
+            <a href="https://github.com/basirul-billah/"><img src="images/git-logo.png" alt="git-logo"></a>
+        </div>
+        <div class="half-width">
+            <h3>Check out my GitHub profile</h3>
+            <p>You are welcomed to check out my GitHub profile. I am a newbee on web development. So it would be nice to have your opinion on my projects.</p>
+        </div>
+    </section>
+    <footer>
+        <h1>Mission <span class="purple-font-color">2022</span></h1>
+        <p>Hard Work, Perseverence and Determination for 2022</p>
+    </footer>
 </body>
 
 </html>
