--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Work+Sans:wght@400;600;800&display=swap"
         rel="stylesheet">
+        <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     
 </head>
 
@@ -50,7 +51,7 @@
                 employeers during interview.</p>
         </div>
         <div id="goals" class="tro-width">
-            <img src="/images/illustrators/illustrator-3.png" alt="illustrator-3">
+            <img src="images/illustrators/illustrator-3.png" alt="illustrator-3">
             <h3>Goals</h3>
             <p>My goal is to learn HTML, HTML5, CSS, CSS3, Javascript, ES6, MongoDB, React, NodeJS, git,
                 GitHub within 2022. So that I can make responsive and scalable websites with little effort.</p>
