final commit... again

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Work+Sans:wght@400;600;800&display=swap"
         rel="stylesheet">
-        <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+
 </head>
 
 <body>
@@ -68,9 +68,11 @@
         </div>
         <div id="right-padding">
             <h1 class="line-spacing-bottom">Only Sky is the Limit</h1>
-            <p class="line-spacing-bottom">If you say the sky is the limit, you mean that there is nothing to prevent someone or something from being very successful.
+            <p class="line-spacing-bottom">If you say the sky is the limit, you mean that there is nothing to prevent
+                someone or something from being very successful.
                 They have found that, in terms of both salary and career success, the sky is the limit.</p>
-            <a href="https://www.nasa.gov/audience/foreducators/5-8/features/F_How_Big_is_Our_Universe.html" target="_blank" class="button">Know the limit</a>
+            <a href="https://www.nasa.gov/audience/foreducators/5-8/features/F_How_Big_is_Our_Universe.html"
+                target="_blank" class="button">Know the limit</a>
         </div>
     </section>
 
@@ -78,23 +80,27 @@
     <section class="limitless-sky flexible-containner">
         <div id="right-padding">
             <h1 class="line-spacing-bottom">Time to fly!</h1>
-            <p class="line-spacing-bottom">After achieving my goals, the final part of the mission will start.  The doors of learning new skills and experiences will be open to me. I shall strive to make myself successful. Because becomming a fullstack developer will be my next target.</p>
-            <a href="images/404 Illustrations.html" target="_blank" class="button">Let's Fly</a>
+            <p class="line-spacing-bottom">After achieving my goals, the final part of the mission will start. The doors
+                of learning new skills and experiences will be open to me. I shall strive to make myself successful.
+                Because becomming a fullstack developer will be my next target.</p>
+            <a href="https://tenor.com/QgMb.gif" target="_blank" class="button">Let's Fly</a>
         </div>
         <div id="coding" class="half-width">
             <img src="images/pictures/project.png" alt="coding">
-        <div id="shape2" class="half-width">
-            <img src="images/shapes/shape-1.png" alt="shape-1">
+            <div id="shape2" class="half-width">
+                <img src="images/shapes/shape-1.png" alt="shape-1">
     </section>
 
     <!--Invite to Github Section-->
     <section class="welcome">
         <div class="half-width">
-            <a href="https://github.com/basirul-billah/"><img src="images/git-logo.png" alt="git-logo"></a>
+            <a href="https://github.com/basirul-billah/" target="_blank"><img src="images/git-logo.png"
+                    alt="git-logo"></a>
         </div>
         <div class="half-width">
             <h3>Check out my GitHub profile</h3>
-            <p>You are welcomed to check out my GitHub profile. I am a newbee on web development. So it would be nice to have your opinion on my projects.</p>
+            <p>You are welcomed to check out my GitHub profile. I am a newbee on web development. So it would be nice to
+                have your opinion on my projects.</p>
         </div>
     </section>
     <footer>
