--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h1 class="line-spacing-bottom">Only Sky is the Limit</h1>
             <p class="line-spacing-bottom">If you say the sky is the limit, you mean that there is nothing to prevent
                 someone or something from being very successful.
-                They have found that, in terms of both salary and career success, the sky is the limit.</p>
+                They have found, in terms of both salary and career success, the sky is the limit.</p>
             <a href="https://www.nasa.gov/audience/foreducators/5-8/features/F_How_Big_is_Our_Universe.html"
                 target="_blank" class="button">Know the limit</a>
         </div>
